--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,7 @@
 
 body {
   font-family: sans-serif;
-  background: linear-gradient(to right, #2c3333, #2c3639);
+  background: linear-gradient(to right, #a5c9ca, #2c3639);
   overflow-x: hidden;
 }
 
